--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,180 @@
 }
 /* The Header Section End Here*/
 
+/* Section One Start Here */
+.section-one{
+    justify-content: center;
+}
+.students-container{
+    justify-content: space-between;
+    width: 72.413125rem;
+    height: 35.9375rem;
+}
+
+.students-self{
+    width: 40rem;
+    height: 35.9375rem;
+}
+
+.boy-container{
+    width: 29.288125rem;
+    height: 35.9375rem;
+}
+
+.boys-tittle-name{
+    font-family: Quicksand;
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-top: 7.625rem;
+}
+
+.boys-self{
+    color: rgb(17, 17, 17);
+    font-family: Quicksand;
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin-top: 1.5rem;
+}
+
+.primary-btn-2{
+    background: rgb(17, 17, 17);
+    margin-top: 1.5rem;
+}
+/* Section One End Here */
+
+/* Section Two Start Here */
+.section-two{
+    width: 1440px;
+    height: 879px;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items: center;
+    background-image: url("../B11-A2-Kids-School/assets/bg.png");
+    margin: 0 auto;
+}
+
+.card-heading{
+   width: 460.61px;
+   height: 57.5px;
+   margin-top: 60px;
+}
+/* Sharing Heading Part */
+.card-head{
+    color: rgb(0, 0, 0);
+    font-family: Quicksand;
+    font-size: 46px;
+    font-weight: 700;
+}
+
+.card-container{
+    width: 1160px;
+    height: 481.5px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 0 28.29px;
+    margin-top: 80px;
+}
+
+.card-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 367.8px;
+    height: 476.78px;
+    background-color: pink;
+    text-align: center;
+}
+
+.card-box-img{
+    width: 132.61px;
+    height: 135.21px;
+    margin: 53px 117px 0px 117.59px;
+}
+
+
+.card-tittles{
+    width: 211.06px;
+    height: 31.13px;
+    color: rgb(32, 32, 32);
+    font-family: Quicksand;
+    font-size: 24.52px;
+    font-weight: 700;
+    margin-top: 32.8px;
+    margin-left: 78.57px;   
+}
+
+.card-description{
+    width: 286.26px;
+    height: 74.51px;
+    color: rgb(128, 128, 128);
+    font-family: Raleway;
+    font-size: 15.09px;
+    font-weight: 500;
+    line-height: 28.3px;
+    margin-top: 33.48px;
+    margin-left: 40.88px;
+}
+
+.read-more{
+    width: 79.65px;
+    height: 18.86px;
+    color: rgb(100, 200, 255);
+    font-family: Quicksand;
+    font-size: 15.09px;
+    font-weight: 700;
+    margin-top: 38.67px;
+    margin-left: 132.46px;
+}
+#card-box-one{
+    box-sizing: border-box;
+    border: 0.94px solid rgb(222, 245, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+
+#card-box-two{
+    box-sizing: border-box;
+    border: 0.94px solid rgb(255, 244, 220);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+#card-box-three{
+    box-sizing: border-box;
+    border: 0.94px solid rgb(242, 232, 255);
+    border-radius: 18.86px;
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+}
+
+.icon-container{
+    width: 130px;
+    height: 60px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 80px;
+}
+
+.less-than,.greater-than{
+    width: 60px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    background: rgb(254, 163, 1);
+    color: rgb(255, 255, 255);
+    font-family: Font Awesome 5 Free;
+    font-size: 24px;
+    font-weight: 900;
+}
+
 /* Responsive For Mobile */
+@media screen and (min-width: 577px){
+     .nav-icon{
+        display: none;
+     }      
+}
 @media screen and (max-width: 576px) {
     .nav-container{
         flex-direction: column;
@@ -88,8 +261,12 @@
         margin-left: 0;
     }
 
-    .nav-school-name{
-        position: absolute;
+    .head-section{
         justify-content: flex-start;
     }
+    /* Section one responsive here */
+    .students-container{
+        flex-direction: column;  
+    }
+   
 }
