--- a/styles/style.css
+++ b/styles/style.css
@@ -126,6 +126,7 @@
     margin: 0 auto;
 }
 
+/* Sharing Heading Part*/
 .card-heading{
    width: 460.61px;
    height: 57.5px;
@@ -241,6 +242,143 @@
     font-size: 24px;
     font-weight: 900;
 }
+/* Section Two Start Here */
+
+/* Section Three Start Here */
+.section-three{
+    width: 100%;
+    height: 1018.02px;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items: center;
+    background-image: url("../B11-A2-Kids-School/assets/bg.png"),linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);;
+    margin: 0 auto;
+}
+
+.stories-container{
+    width: 1160px;
+    height: 630.52px;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+.baby-container{
+    position: relative;
+    width: 540.27px;
+    height: 630.52px;
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+}
+
+.baby-btn{
+    position: absolute;
+    width: 174.51px;
+    height: 47.93px;
+    border: none;
+    border-radius: 47.93px;
+    margin-top: 314.14px;
+    margin-left: 38.35px;
+}
+
+.baby-img{
+    border-radius: 16px 16px 0px 0px;
+    background: url(),rgb(217, 217, 217);
+}
+
+.baby-tittle{
+    width: 402.49px;
+    height: 69.98px;
+    color: rgb(0, 0, 0);
+    font-family: Quicksand;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 38.35px;
+    margin-top: 61.51px;
+    margin-left: 38.35px;
+}
+
+.baby-description{
+    width: 433.06px;
+    height: 75.74px;
+    color: rgb(102, 102, 102);
+    font-family: Raleway;
+    font-size: 15.34px;
+    font-weight: 500;
+    line-height: 28.76px;
+    margin-top: 51.77px;
+    margin-left: 38.35px;
+}
+
+.babys-container{
+    position: relative;
+    width: 601px;
+    height: 622.4px;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 0 18px;
+}
+
+.babys-pic{
+    width: 290.69px;
+    height: 301.61px;
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+}
+
+.babys-img{
+    border-radius: 16px 16px 0px 0px;
+    background: url(),rgb(255, 255, 255);
+}
+
+.babys-btn{
+   position: absolute;
+   width: 174.51px;
+   height: 38.35px;
+   margin-top: 157.81px;
+   margin-left: 38.35px;
+   color: rgb(255, 255, 255);
+   font-family: Raleway;
+   font-size: 15.34px;
+   font-weight: 500;
+   line-height: 28.76px;
+   border: none;
+   border-radius: 47.93px;
+   background: rgb(149, 178, 38);
+}
+
+#babys-btn-two{
+    background: rgb(93, 88, 240);
+}
+
+#babys-btn-four{
+    width: 127.44px;
+    height: 38.35px;
+}
+
+.babys-description{
+    width: 198.04px;
+    height: 47.93px;
+    color: rgb(0, 0, 0);
+    font-family: Quicksand;
+    font-size: 15.34px;
+    font-weight: 700;
+    line-height: 28.76px;
+    margin: 42.12px 54.75px 33.51px 37.95px;
+}
+
+.view-btn{
+    width: 197px;
+    height: 50px;
+    margin-top: 80px;
+    color: rgb(255, 255, 255);
+    font-family: Quicksand;
+    font-size: 20px;
+    font-weight: 700;
+    border: none;
+    border-radius: 12px;
+    background: rgb(17, 17, 17);
+}
+/* Section Three End Here */
 
 /* Responsive For Mobile */
 @media screen and (min-width: 577px){
